--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-data
+data/.
 __pycache__
-cache
+cache/.
 data/inter_diningcode_jongro_dropped.csv
 data/inter_diningcode_youngdeungpo_dropped.csv
+model_weights/.
